--- a/index.html
+++ b/index.html
@@ -1,19 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+
 
     <title>CA - Inicio</title>
 </head>
+
 <body>
+    <!--Navbar-->
+    <nav class="navbar navbar-dark navbar-expand-lg">
+        <div class="container-fluid">
+            <img src="img/logo.png" alt="logo">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#intro">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#aboutus">Formacion</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#courses">Cursos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!--Introduction-->
+    <div id="intro">
+        <h1>El secreto de ir avanzando <br> es empezar</h1>
+        <div id="btnDiv" class="d-flex justify-content-center">
+            <button>Conoce nuestros cursos</button>
+        </div>
+        
+    </div>
+    <!--About us-->
+    <div class="header">
+        <h1>Formacion</h1>
+    </div>
+    <div id="aboutus" >
+
+    </div>
+    <!--Courses-->
+    <div class="header" id="courses">
+        <h1>Cursos</h1>
+    </div>
     <div class="container mt-5">
-        <input type="text" id="courseInput" placeholder="Curso..."/>
+        <input type="text" id="courseInput" placeholder="Curso..." />
         <table class="table">
             <thead class="text-primary">
                 <td>Curso</td>
@@ -25,9 +75,17 @@
                 <!--Content gets rendered here-->
             </tbody>
         </table>
+        <div class="btns">
+            <button class="btn btn-primary disabled" id="previousBtn"><</button>
+            <button class="btn btn-primary" id="nextBtn">></button>
+        </div>
     </div>
+    <!--Footer-->
+    <div id="footer">
 
+    </div>
     <script src="script/fetchCourses.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
+
 </html>
