--- a/index.html
+++ b/index.html
@@ -59,15 +59,20 @@
 
     </div>
     <!--Courses-->
-    <div class="header" id="courses">
+    <div class="header">
         <h1>Cursos</h1>
     </div>
-    <div class="container mt-5">
-        <input type="text" id="courseInput" placeholder="Curso..." />
-        <table class="table">
-            <thead class="text-primary">
+    <div class="container mt-5 table-responsive" id="courses">
+        <div class="input-group my-2">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">Curso</span>
+            </div>
+            <input type="text" class="form-control" id="courseInput">
+          </div>
+        <table class="table align-middle table-hover">
+            <thead class="fw-bold">
                 <td>Curso</td>
-                <td>Horarios</td>
+                <td>Horario</td>
                 <td>Profesor/a</td>
                 <td></td>
             </thead>
@@ -75,9 +80,9 @@
                 <!--Content gets rendered here-->
             </tbody>
         </table>
-        <div class="btns">
-            <button class="btn btn-primary disabled" id="previousBtn"><</button>
-            <button class="btn btn-primary" id="nextBtn">></button>
+        <div class="btns d-flex justify-content-center">
+            <button class="btn disabled mx-2" id="previousBtn"><</button>
+            <button class="btn mx-2" id="nextBtn">></button>
         </div>
     </div>
     <!--Footer-->
