--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
 
     <title>CA - Inicio</title>
@@ -31,7 +27,7 @@
                         <a class="nav-link" aria-current="page" href="#intro">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#aboutus">Formacion</a>
+                        <a class="nav-link" href="/views/aboutus.html">Formacion</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#courses">Cursos</a>
@@ -86,9 +82,31 @@
         </div>
     </div>
     <!--Footer-->
-    <div id="footer">
-
+    <div id="footer" class="p-5">
+        <div>
+            <img src="img/logo.png" alt="logo" style="width: 200px">
+        </div>
+        <div class="row">
+            <div class="col text-light">
+                <p>Consultas: <a href="#">codeandoaprendo@gmail.com</a></p>
+                <a href="#" class="text-decoration-none text-light">Políticas de privacidad</a> | <a href="#" class="text-decoration-none text-light">Términos y condiciones</a>
+            </div>
+            <div class="col">
+                <div class="input-group">
+                    <input type="text" class="form-control form-control-sm" placeholder="example@gmail.com">
+                    <div class="input-group-append">
+                      <button class="btn btn-outline-light" type="button">Suscribite</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr class="text-light"/>
+        <div id="copyright" class="d-flex justify-content-center text-light">
+            <p>CodeandoAprendo @ 2023 | Todos los derechos reservados</p>
+        </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script/fetchCourses.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
