--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link rel="stylesheet"
+        href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 
     <title>CA - Inicio</title>
 </head>
@@ -27,13 +28,13 @@
                         <a class="nav-link" aria-current="page" href="#intro">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/views/aboutus.html">Formacion</a>
+                        <a class="nav-link" href="/views/aboutus.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#courses">Cursos</a>
+                        <a class="nav-link" href="/views/courses.html">Cursos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="/views/contactus.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -43,42 +44,53 @@
     <div id="intro">
         <h1>El secreto de ir avanzando <br> es empezar</h1>
         <div id="btnDiv" class="d-flex justify-content-center">
-            <button>Conoce nuestros cursos</button>
+            <a href="views/courses.html">Conoce nuestros cursos</a>
         </div>
-        
+
     </div>
     <!--About us-->
     <div class="header">
         <h1>Formacion</h1>
     </div>
-    <div id="aboutus" >
-
-    </div>
-    <!--Courses-->
-    <div class="header">
-        <h1>Cursos</h1>
-    </div>
-    <div class="container mt-5 table-responsive" id="courses">
-        <div class="input-group my-2">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon1">Curso</span>
-            </div>
-            <input type="text" class="form-control" id="courseInput">
-          </div>
-        <table class="table align-middle table-hover">
-            <thead class="fw-bold">
-                <td>Curso</td>
-                <td>Horario</td>
-                <td>Profesor/a</td>
-                <td></td>
-            </thead>
-            <tbody id="table-content">
-                <!--Content gets rendered here-->
-            </tbody>
-        </table>
-        <div class="btns d-flex justify-content-center">
-            <button class="btn disabled mx-2" id="previousBtn"><</button>
-            <button class="btn mx-2" id="nextBtn">></button>
+    <div id="aboutus" class="row text-center mt-5 p-5">
+        <h2>¿Por qué elegirnos?</h2>
+        <p>
+            La plataforma cuenta con instructores altamente capacitados y experimentados en la industria de la
+            programación, que están dedicados a ayudar a los estudiantes a alcanzar sus objetivos y
+            convertirse en desarrolladores exitosos. Los cursos son interactivos y prácticos, con numerosos proyectos y
+            ejercicios que ayudan a los estudiantes a aplicar lo que han aprendido en la vida real. Desde su
+            lanzamiento, la plataforma ha ayudado a miles de estudiantes a mejorar sus habilidades y 
+            alcanzar sus objetivos profesionales. Con una comunidad de estudiantes apasionados y colaborativos, la
+            plataforma sigue evolucionando para satisfacer las necesidades de una industria en constante
+            cambio y preparar a los estudiantes para el éxito en el futuro digital.
+        </p>
+        <div class="col-sm-6 col-md-3 my-2">
+            <span><i class="las la-fist-raised"></i></span>
+            <h3>Dedicación</h3>
+            <p>
+                Damos siempre lo mejor de nosotros para que todo quede claro.
+            </p>
+        </div>
+        <div class="col-sm-6 col-md-3 my-2">
+            <span><i class="las la-calendar-day"></i></span>
+            <h3>Flexibilidad</h3>
+            <p>
+                Ofrecemos cursos en distintos horarios para que puedas organizarte mejor.
+            </p>
+        </div>
+        <div class="col-sm-6 col-md-3 my-2">
+            <span><i class="las la-tools"></i></span>
+            <h3>Soporte</h3>
+            <p>
+                Contamos con un equipo de soporte que puede ayudarte ante cualquier inconveniente.
+            </p>
+        </div>
+        <div class="col-sm-6 col-md-3 my-2">
+            <span><i class="las la-clock"></i></span>
+            <h3>Al día</h3>
+            <p>
+                Enseñamos habilidades modernas y estamos constantemente actualizando los contenidos.
+            </p>
         </div>
     </div>
     <!--Footer-->
@@ -89,25 +101,25 @@
         <div class="row">
             <div class="col text-light">
                 <p>Consultas: <a href="#">codeandoaprendo@gmail.com</a></p>
-                <a href="#" class="text-decoration-none text-light">Políticas de privacidad</a> | <a href="#" class="text-decoration-none text-light">Términos y condiciones</a>
+                <a href="#" class="text-decoration-none text-light">Políticas de privacidad</a> | <a href="#"
+                    class="text-decoration-none text-light">Términos y condiciones</a>
             </div>
             <div class="col">
                 <div class="input-group">
                     <input type="text" class="form-control form-control-sm" placeholder="example@gmail.com">
                     <div class="input-group-append">
-                      <button class="btn btn-outline-light" type="button">Suscribite</button>
+                        <button class="btn btn-outline-light" type="button">Suscribite</button>
                     </div>
                 </div>
             </div>
         </div>
-        <hr class="text-light"/>
+        <hr class="text-light" />
         <div id="copyright" class="d-flex justify-content-center text-light">
             <p>CodeandoAprendo @ 2023 | Todos los derechos reservados</p>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script/fetchCourses.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
